--- a/Crypto Notepad/Properties/Resources.resx
+++ b/Crypto Notepad/Properties/Resources.resx
@@ -1013,4 +1013,16 @@
         rkJggg==
 </value>
   </data>
+  <data name="application" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAZdEVYdFNvZnR3YXJlAEFkb2JlIEltYWdlUmVhZHlxyWU8AAABRElEQVQ4T6XTv2vCQBjG8Rec
+        HAJOHTq6ZHdycnLJIJiAQ+mubSmFUujSuf+FBEEIQiAEBBFd64+ihQYMrZApg0JEFAwYRHl6796hZw++
+        cNzxgXuHIwD/iiqVSlZ0JapKxiZLhmFcD4fDWRAEmM+/4fs+PO8T0+kU4/EY4g6DAfcu9h8YjTxMJl/o
+        dt9mbKlcLt/2+330ej1x2EWn00G73YbrunAcB7Zto9VqwbIsNJtNNBoNmKaJer2OVCpV5RFqYpazFlvS
+        df3mdDrheDxKxYYtlUqlu8PhgCRJpGLDljRNu9/v94jjWCo2bKlYLD7sdjtsNhup2LClQqHwuN1usVqt
+        pGLDlvL5/NN6vcZisZCKDVvK5XLPURQhDEOp2LAlVVVf+EnL5VIqNmxJUZRaJpN5PSe2JFZadCG6lIxN
+        +tcv+vdAPyeV1d4vqFF3AAAAAElFTkSuQmCC
+</value>
+  </data>
 </root>
