--- a/Crypto Notepad/Properties/Resources.resx
+++ b/Crypto Notepad/Properties/Resources.resx
@@ -1015,14 +1015,29 @@
   </data>
   <data name="application_blue" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAABl0RVh0U29m
+        dHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAFSSURBVDhPpdPBKwRhGMfx92j/AVquLkoODg5ikz1I
+        SltqS0kkTnLCYR0oaU8upA2rjVJSkr0hamUlXmSVtkSZtpnMNHa3mcwYM37muTt411Pf46ee5/AwAP+K
+        daTUsF/ajwtGJsxCSSU9deGU47lvLNx6mL9yMJu1MZP5wOSJifEjA0PHBiKnJkJnFhovPxG8+ULw3C6T
+        ZW2rBT6WfsfogY6RfQ3De28Y3JUxsFNA//Yrolsv6Es9IZLMo3ftET2JB3Sv3KNr+Q410xlOJ3D/loqG
+        LGtfl7nneXBdVygyZFlrQuKO48C2baHIkGUtS8/csiyYpikUGbKseTHPDcNAsVgUigxZ1hTP8VKpBE3T
+        hCJDljXMXXNd1yHLslBkyLL6WJarqgpJkoQiQ5bVTRxyWklRFKHIkGVVnbGNQHSTVxJZ5k/Ar9qvVjAy
+        gV9f9O+B/QDSyg0U5iAfSgAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="disk__minus" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAZdEVYdFNvZnR3YXJlAEFkb2JlIEltYWdlUmVhZHlxyWU8AAABUklEQVQ4T6XTwSsEYRjH8fdo
-        /wFari5KDg4OYpM9SEpbaktJJE5ywmEdKGlPLqQNq41SUpK9IWplJV5klbZEmbaZzDR2t5nMGDN+5rk7
-        eNdT3+OnnufwMAD/inWk1LBf2o8LRibMQkklPXXhlOO5byzcepi/cjCbtTGT+cDkiYnxIwNDxwYipyZC
-        ZxYaLz8RvPlC8Nwuk2VtqwU+ln7H6IGOkX0Nw3tvGNyVMbBTQP/2K6JbL+hLPSGSzKN37RE9iQd0r9yj
-        a/kONdMZTidw/5aKhixrX5e553lwXVcoMmRZa0LijuPAtm2hyJBlLUvP3LIsmKYpFBmyrHkxzw3DQLFY
-        FIoMWdYUz/FSqQRN04QiQ5Y1zF1zXdchy7JQZMiy+liWq6oKSZKEIkOW1U0cclpJURShyJBlVZ2xjUB0
-        k1cSWeZPwK/ar1YwMoFfX/Tvgf0A0soNFOYgH0oAAAAASUVORK5CYII=
+        YQUAAAAZdEVYdFNvZnR3YXJlAEFkb2JlIEltYWdlUmVhZHlxyWU8AAAB6klEQVQ4T6XOXUhTcRjH8Wdn
+        u5f0IoiIontljqDbiKCii0CWKLZy5egi6ibwIkmhF3VtbcJsZqQW5VbD6AhR24qWCydSF2VFRvaCURkD
+        X/BlMNiv/+/gotgYRgc+HPj/n+9zjgD4L+I0+xT/MeWivbXVtRacZRMS9TSqBYp3cnBBLQRyRYy7XIja
+        bL/pW6zol3U/BkWuyGGzl3wTA2lkczlkstkCkepqrDgcBXpEnsshs4e6Xvb9xJIanlteLnDX6cRlq9UQ
+        VMv8m6vQIuUz5/gHDrObAi96v2E2k8H3+fmSOMNZNie1XSINWjsFx4PTmFFf+5ROl8QZzrJhK/XaeepN
+        BT7j49Qcvi4ulsQZzrJhK3XaWbqW9H9ArH1iTTjLhq3Uam00kPBOovPADXTYrxfFu7yx7i9gw1bs2hm6
+        +ajzDTx1t5BKjWFkJPkXnvHuTnMSvoYwnnVNgQ1bqdFOUzh64RX8B28jHk+gZU+3YXj4gYFnvOOC4NF7
+        eHrpPdiwlf1aMw3FO14j0DgEXY8ZbwqHdUP+jAv6jz/EE887sGErFaaNst1Us2Ov6USsbffV2Ugkip4m
+        3RAK3Tfkz7ggdCqBx+634DxbPpuUyq2y7chOaRq1WCzuYnj3J5vs61ttpUxZr2z4R6qRsl9qPVVwJqmK
+        bwAAAABJRU5ErkJggg==
 </value>
   </data>
 </root>
