Minor functionality improvements in "Password generator" window
- Added icon to the title bar;
- Saving password parameters after window closing;
- Button "Generate" disabling when the password length is less than 8 or more than 128 or when all checkboxes are unchecked;

--- a/Crypto Notepad/PasswordGeneratorFrom.resx
+++ b/Crypto Notepad/PasswordGeneratorFrom.resx
@@ -117,4 +117,29 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAEBAAAAEAIABoBAAAFgAAACgAAAAQAAAAIAAAAAEAIAAAAAAAAAQAAAAAAAAAAAAAAAAAAAAA
+        AAD///8AAAAAAgAAAAwAAAAaABoxWQAtV70AGC5gAAAAKwAAAB4AAAAQAAAABAZtAJkFaQDMBm0AmQdx
+        AAAOjAAA////AAAAAAEAAAAGAAAADQAzXaiFzub/ADNdqQAjPk8AAAAPAAAACAAAAAIMgwDMK98a/wyD
+        AMwNiAAADowAAP///wAAAAAAAAAAAAAvTwAAPmihg8zl/33K5P8APmmiBEM1AA6NAJkOjADMDowAzD3i
+        LP8OjADMDowAzA6NAJn///8AAAAAAAA5WQAAS3YAAEt2qYPM5f8AS3apAEt2LghwOwAQlQDMUudB/1Ln
+        Qf9S50H/UudB/1LnQf8QlQDM////AABUfwAAVH8AAFR/AABUf7aDzOX/dsLc9gBUf7YJeEAAEpwAmRKd
+        AMwSnQDMZutV/xKdAMwSnQDMEpwAmf///wAAVYAAAFWAAABVgAAAVYC1g8zl/wBVgLUAVYAuBWdgABKd
+        AAAToQAAFKQAzHXuZP8UpADME6EAABKdAAD///8AAFmFAABWgQAAVYAAAFWAsYPM5f9muNX/AFWAsQBV
+        gAAFaGEAFKgAABWpAJkVqQDMFakAmRSoAAASnQAA////AABZhQAAVoEFAFWAQQBVgKyDzOX/YbPS/wBV
+        gKwAVYBBAFaBBQVtZAAVqQAAFaoAABWpAAAUqAAAEp0AAP///wAAWYUHAFiEbT6OscV8w+Drcrza/1uu
+        zv9Xr9LrLIatxQBYhG0AWYUHBm5kABWqAAAVqQAAFKgAABKdAAD///8AAV6MS1SkxcyW2vb/iMzu/2ey
+        0/9MosX/Ta/X/2LG7f87mcLMAV6MSwFejQAGcWoAC4RHAAuDRwAKfkcA////AAFjlIWZ3/f3mt74/5ba
+        9f+ByuX/br3a/2rD5P9pyvD/ac309wFjlIUBY5QAAWOUAAFjlAABY5QAAWOUAP///wACap6SoeX+/xCY
+        sc4AkKjJAJCoyQCQqMkAkKjJCZawzm7T+v8Cap6SAmqeAAJqngACap4AAmqeAAJqngD///8AAnCocYzX
+        8etFq8vdAIakggCJpRkAiaUZAIakgimix91qyu/rAnCocQJwqAACcKgAAnCoAAJwqAACcKgA////AAJ2
+        sC8nkcOkneH5/0WhxtYPeqW6C3iiuimUvNZ30fP/Io/CpAJ2sC8Cda8AAnWvAAJ1rwACda8AAnWvAP//
+        /wADe7cBA3y5TCmWyaF+zu3djdXs/4DM5v9txOXdJZTJoQN8uUwDe7cBA3u3AAN7twADe7cAA3u3AAN7
+        twD///8AA3u3AAN+vQEDgL8tA4C/aQOAv4MDgL+DA4C/aQOAvy0Dfr0BA3u3AAN7twADe7cAA3u3AAN7
+        twADe7cAgAMAAIADAADwgAAA8IAAAPCAAADw4wAA8OMAAMA/AACAHwAAgB8AAIAfAACAHwAAgB8AAIAf
+        AACAHwAAwD8AAA==
+</value>
+  </data>
 </root>
