Renamed ChangeKeyForm to ChangePasswordForm

--- a/Crypto Notepad/Forms/MainForm.resx
+++ b/Crypto Notepad/Forms/MainForm.resx
@@ -163,7 +163,7 @@
         ls8mjzluOrP5k2QAWNYAQ/B729ITVjwAAAAASUVORK5CYII=
 </value>
   </data>
-  <data name="changeKeyToolbarButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="changePasswordToolbarButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAABl0RVh0U29m
         dHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAIfSURBVDhPfYxdSJNhFMfPu/VJhd4E5UVEETFyk+gq
