--- a/Crypto Notepad/Forms/SettingsForm.resx
+++ b/Crypto Notepad/Forms/SettingsForm.resx
@@ -120,6 +120,9 @@
   <metadata name="colorDialog.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <metadata name="settingsToolTip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>240, 17</value>
+  </metadata>
   <data name="encryptionHintLabel.Text" xml:space="preserve">
     <value>For the best balance of performance &amp;&amp; security is recommended to use SHA512 Hash / 256 Key size / above 2000000 Password iterations. But caution, if you change this parameters you will not able to decrypt previously encrypted files with old parameters.</value>
   </data>
@@ -130,7 +133,7 @@
     <value>131, 17</value>
   </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>50</value>
+    <value>74</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
