Updated url to app website
Now website stored at https://crypto-notepad.github.io/

--- a/Crypto Notepad/Forms/AboutFrom.resx
+++ b/Crypto Notepad/Forms/AboutFrom.resx
@@ -128,7 +128,7 @@
 The source code, issues and documentation posted on GitHub.
 
 Github: https://github.com/Crypto-Notepad/Crypto-Notepad
-Website: https://crypto-notepad.info/
+Website: https://crypto-notepad.github.io/
 
 Contributors/testers:
 
